Ajout de nouvelles polices et mise à jour du style global. Changement du titre et de la description de la métadonnée. Amélioration de la page d'accueil avec un nouveau texte et des classes CSS pour le style.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,20 @@
 
 
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  :root {
+    --font-sans: 'Poppins', sans-serif;
+    /* --font-marcellus: 'Marcellus', serif; */
+    /* --font-cormorant: 'Cormorant Garamond', serif; */
+    /* --font-lora: 'Lora', serif; */
+    --font-cinzel: 'Cinzel', serif;
+  }
+
+  html {
+    font-family: var(--font-sans);
+  }
+
+  h1, h2, h3 {
+    font-family: var(--font-cinzel);
+  }
 }
